run error-prone on examples + eliminate unnecessary temp (#183)
* run error-prone on examples + eliminate unnecessary temp

* fix curl

* use https